update current user
